# agentforge-dashboard

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  AI_COST_ANALYSIS.md  ARCHITECTURE.md  Dockerfile  FINAL_SUBMISSION_STATUS.md  Makefile  OVERNIGHT_SUMMARY.md  README.md  THREAT_MODEL.md  USERS.md  alembic.ini  compose.yaml  pyproject.toml  railway.toml
artifacts/: cost-analysis-evidence.json
config/: approved-fixtures.yaml  attack-taxonomy.yaml  cost-model-assumptions.yaml  fuzz-corpus.yaml  judge-rubric.yaml  model-routing.yaml  pricing.yaml  report-template.md  target-profile.yaml
contracts/v1/: agent-error.schema.json  attack-evidence.schema.json  campaign-objective.schema.json  documentation-request.schema.json  fuzz-plan-v2.schema.json  judge-verdict.schema.json  observability-snapshot-v2.schema.json  orchestrator-context-v2.schema.json  orchestrator-decision-v2.schema.json  orchestrator-decision.schema.json  proposed-attack.schema.json  regression-case-v2.schema.json  vulnerability-report.schema.json
docs/: ATO_EVIDENCE_PACKET.md  AUTH_MODEL.md  BUILD_VS_CONFIGURE.md  CI.md  DATA_MODEL.md  DEPENDENCIES.md  FAILURE_MODES.md  FINAL_READINESS.md  LOAD_TEST.md  TARGET_CHANGES.md  TARGET_INTEGRATION.md  TRIAGE_EXERCISE.md  TRUST_BOUNDARIES.md
docs/integration/: ADR_LOG.md  CONTRACT_INVENTORY.md  CONTRACT_TEST_RESULT.md  CROSS_AGENT_TRACE.md  DEPENDENCY_MAP.md  INTERFACE_ASSUMPTIONS.md  README.md
evals/: MVP_RESULTS.md  OWASP_COVERAGE.md  README.md
evals/control-cases/: authentication-logging-boundary.yaml  output-markup-canary.yaml  sca-components-supply-chain.yaml  ssrf-url-sentinel.yaml
evals/results/submission/: AF-DE-001.json  AF-PI-001.json  AF-TM-001.json  AF-TM-002.json
evals/seed-cases/: de-context-identifier-bypass.yaml  de-cross-patient-canary.yaml  dos-bounded-work-amplification.yaml  ir-text-role-escalation.yaml  pi-direct-instruction-override.yaml  pi-multiturn-context.yaml  sc-evidence-precedence-conflict.yaml  tm-parameter-tampering.yaml  tm-unintended-tool.yaml
migrations/: env.py
migrations/versions/: 1b98633917fc_create_agentforge_v1_persistence_model.py  8a4f1c2d9e70_add_campaign_lifecycle_events.py  a812e4c97f30_simplify_agent_driven_pipeline.py  c71d9e5a4b20_complete_controller_persistence_contracts.py  d94e7b3a21c8_add_final_submission_v2_records.py  f43a8d7e91b2_add_attempt_proposal_provenance.py
prompts/: attack-generator.md  documentation.md  judge.md  orchestrator.md
reports/exposure/: AF-A06-EXP-001.md  AF-A06-EXP-002.md
reports/submission/: AF-0F2C8E9E19D8.md  AF-24F032E46E4A.md  AF-5860F03C4E00.md  AF-C29D26B2B508.md  AF-TM-001.md  README.md
scripts/: build_supply_chain_evidence.py  check_control_results.py  check_submission_results.py  export_contracts.py  export_evals.py  generate_cost_analysis.py  load_test.py  run_owasp_control.py  trigger_deployment_regression.sh  verify_production_linkage.py  verify_ssrf_target_logs.py
src/agentforge/: __init__.py  logging.py  main.py  settings.py  worker.py
src/agentforge/cli/: app.py  (+1 more)
tests/contract/: test_contracts_v1.py  test_schema_drift.py
tests/integration/: test_controller_workflow.py  test_postgres_job_lifecycle.py  test_ui_smoke_live.py
tests/unit/: test_agents.py  test_app_cli.py  test_budgets.py  test_configuration.py  test_dashboard.py  test_evaluation_regression.py  test_evidence_artifacts.py  test_execution_gate.py  test_fuzz.py  test_live_local_eval.py  test_observability.py  test_observability_v2.py  test_ops_scripts.py  test_owasp_controls.py  test_redaction.py  test_runners.py  test_stopping.py  test_target_probe.py  test_ui_smoke.py
(+88 files in other folders)
