[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.1.0"
description = "Authorized, evidence-first security evaluation for AgentForge/OpenEMR"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
authors = [{ name = "AgentForge Team" }]
dependencies = [
  "alembic>=1.15,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "langfuse==4.14.1",
  "openai-agents==0.18.3",
  "openinference-instrumentation-openai-agents==1.6.1",
  "playwright>=1.52,<2",
  "prometheus-client>=0.21,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "python-multipart>=0.0.20,<1",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0.40,<3",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.26,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.scripts]
agentforge = "agentforge.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "integration: requires PostgreSQL or another external service",
  "e2e: requires an explicitly authorized live target",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["B008", "S101"]

[tool.coverage.run]
branch = true
source = ["agentforge"]
